Removed float:left (fixed center alignment)

--- a/admin/css/login.css
+++ b/admin/css/login.css
@@ -45,7 +45,6 @@ width:60%;
 padding: 10px;
 margin: auto;
 width:300px;
-float:left;
 padding:10px 40px 25px;
 margin-top:70px;
 background-color:#FEFFED;
